--- a/vistas/index.html
+++ b/vistas/index.html
@@ -78,7 +78,7 @@
                     <p id="advertencias"></p>
                     <br>
                     <div class="justify-content-center" style="text-align: center;">
-                        <span><a class="a a-enlace" href="#">Recuperar contraseña</a></span>
+                        <span><a class="a a-enlace" href="correo.html">Recuperar contraseña</a></span>
                     </div>
                 </div>
 
