Recuperar contrasena completo

--- a/vistas/correo.html
+++ b/vistas/correo.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Untitled</title>
+    <title>Recuperaion de contraseña</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/contenedores.css">
     <link rel="stylesheet" href="../css/formularios.css">
@@ -54,7 +54,7 @@
                     <div class="mx-sm-4 pt-3 " style="text-align: center;">
                         <img src="../imagenes/logo 125x125.png" class="col-7">
                     </div>
-                    <form action="conexion.php" method="POST" id="login">
+                    <form action="enviar_c.php" method="POST" id="login">
                         <div class="form-group mx-sm-7 pt-3">
                             <p class="pa pa-texto ">Correo </p>
                             <input class="txt text-input" type="text " name="correo" id="correo" data-toggle="tooltip" data-placement="right" title="El correo debe ser institucional ejem@toluca.tecnm.mx" pattern="[a-zA-Z0-9.#$%&*+_-]{1,35}(@toluca.tecnm.mx){1}" required />
@@ -65,7 +65,7 @@
                         </div>
                         <div class="col-10">
                             <br>
-                            <button class="btn btn-boton-ext " type="submit" form="login"><img class="fa fa-icon " src="../imagenes/next.png "/> Enviar</button>
+                            <button class="btn btn-boton-ext " type="submit" name="enviar" form="login"><img class="fa fa-icon " src="../imagenes/next.png "/> Enviar</button>
                         </div>
                         <div class="col-1">
                         </div>
