--- a/vistas/index.html
+++ b/vistas/index.html
@@ -71,7 +71,7 @@
 
                         </div>
                         <div class="col-6">
-                            <button class="btn btn-boton " type="submit" form="login"><img class="fa fa-icon " src="../imagenes/login.png "/> Iniciar Sesion</button>
+                            <button class="btn btn-boton " type="submit" name="login" form="login"><img class="fa fa-icon " src="../imagenes/login.png "/> Iniciar Sesion</button>
 
                         </div>
                     </div>
