--- a/vistas/registrousuario.html
+++ b/vistas/registrousuario.html
@@ -58,7 +58,7 @@
 
                 </div>
                 <div class="div div-cuerpo form-group mx-sm-6">
-                    <form action="conexion.php" method="POST" id="registro">
+                    <form action="../php/Usuario.php" method="POST" id="registro">
                         <div class="form-group mx-sm-7 pt-3">
                             <p class="pa pa-texto ">Correo </p>
                             <input class="txt text-input" type="text " name="correo" id="correo" data-toggle="tooltip" data-placement="right" title="El correo debe ser institucional ejem@toluca.tecnm.mx" pattern="[a-zA-Z0-9.#$%&*+_-]{1,35}(@toluca.tecnm.mx){1}" required/>
