--- a/vistas/registrousuario.html
+++ b/vistas/registrousuario.html
@@ -58,7 +58,7 @@
 
                 </div>
                 <div class="div div-cuerpo form-group mx-sm-6">
-                    <form action="../php/Usuario.php" method="POST" id="registro">
+                    <form action="conexion.php" method="POST" id="registro">
                         <div class="form-group mx-sm-7 pt-3">
                             <p class="pa pa-texto ">Correo </p>
                             <input class="txt text-input" type="text " name="correo" id="correo" data-toggle="tooltip" data-placement="right" title="El correo debe ser institucional ejem@toluca.tecnm.mx" pattern="[a-zA-Z0-9.#$%&*+_-]{1,35}(@toluca.tecnm.mx){1}" required/>
@@ -107,7 +107,7 @@
                             <button class="btn btn-cancelar " type="button " onclick="location.href='index.html'"><img class="fa fa-icon " src="../imagenes/cancel.png " /> Cancelar</button>
                         </div>
                         <div class="col-6">
-                            <button class="btn btn-boton " type="submit " form="registro"><img class="fa fa-icon " src="../imagenes/signin.png " /> Registrarse</button>
+                            <button class="btn btn-boton " type="submit " name="registrar" form="registro"><img class="fa fa-icon " src="../imagenes/signin.png " /> Registrarse</button>
                         </div>
                     </div>
                 </div>
