--- a/vistas/registrousuario.html
+++ b/vistas/registrousuario.html
@@ -82,15 +82,15 @@
                         <div class="form-group mx-sm-7 pt-3">
                             <select name="carrera" id="carrera" class="slct slct-combo" required>
                                 <option value="">Seleccione una opcion</option>
-                                <option value="isc">Ingenieria en Sistemas Computacionales</option>
-                                <option value="ii">Ingenieria Industrial</option>
-                                <option value="il">Ingenieria Logistica</option>
-                                <option value="im">Ingenieria Mecatronica</option>
-                                <option value="iem">Ingenieria Electronica</option>
-                                <option value="ie">Ingenieria Electromecanica</option>
-                                <option value="iq">Ingenieria Quimica</option>
-                                <option value="ige">Ingenieria en Gestion Empresarial</option>
-                                <option value="it">Ingenieria en TIC's</option>
+                                <option value="Ingenieria en Sistemas Computacionales">Ingenieria en Sistemas Computacionales</option>
+                                <option value="Ingenieria Industrial">Ingenieria Industrial</option>
+                                <option value="Ingenieria Logistica">Ingenieria Logistica</option>
+                                <option value="Ingenieria Mecatronica">Ingenieria Mecatronica</option>
+                                <option value="Ingenieria Electronica">Ingenieria Electronica</option>
+                                <option value="Ingenieria Electromecanica">Ingenieria Electromecanica</option>
+                                <option value="Ingenieria Quimica">Ingenieria Quimica</option>
+                                <option value="Ingenieria en Gestion Empresarial">Ingenieria en Gestion Empresarial</option>
+                                <option value="Ingenieria en TIC's">Ingenieria en TIC's</option>
                             </select>
                         </div>
                         <div class="form-group mx-sm-7 pb-3 ">
