--- a/vistas/autorizarproyecto.html
+++ b/vistas/autorizarproyecto.html
@@ -79,8 +79,9 @@
                             <table class="table1">
                                 <tr class="tr1">
                                     <th>Titulo</th>
-                                    <th>Folio</th>
-                                    <th>Estatus de aprobacion</th>
+                                    <th>Correo asesor</th>
+                                    <th>Aprobacion</th>
+                                    <th>Fecha</th>
                                 </tr>
                                 <tr>
                                     <td>Jill</td>
