--- a/vistas/index.html
+++ b/vistas/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/formularios.css">
     <link rel="stylesheet" href="../css/textos.css">
     <link rel="stylesheet" href="../css/botones.css" />
-
+    <meta http-equiv=”Content-Type” content=”text/html; charset=ISO-8859-1″ />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -67,7 +67,7 @@
                     </form>
                     <div class="row">
                         <div class="col-6">
-                            <button class="btn btn-boton " type="submit" name="registrar"onclick="location.href='registrousuario.html'"><img class="fa fa-icon " src="../imagenes/signin.png " /> Registrarse</button>
+                            <button class="btn btn-boton " type="submit" name="registrar" onclick="location.href='registrousuario.html'"><img class="fa fa-icon " src="../imagenes/signin.png " /> Registrarse</button>
 
                         </div>
                         <div class="col-6">
