--- a/vistas/index.html
+++ b/vistas/index.html
@@ -46,7 +46,7 @@
             <div class="formulario col-10 col-sm-9 col-md-7 col-lg-5 col-xl-4 ">
                 <div>
                     <div class="div div-cabeza mx-sm-7">
-                        <p class="ti ti-texto ">Iniciar Sesion </p>
+                        <p class="ti ti-texto ">Iniciar Sesión </p>
                     </div>
 
                 </div>
@@ -71,7 +71,7 @@
 
                         </div>
                         <div class="col-6">
-                            <button class="btn btn-boton " type="submit" name="login" form="login"><img class="fa fa-icon " src="../imagenes/login.png "/> Iniciar Sesion</button>
+                            <button class="btn btn-boton " type="submit" name="login" form="login"><img class="fa fa-icon " src="../imagenes/login.png "/> Iniciar Sesión</button>
 
                         </div>
                     </div>
