--- a/vistas/registrousuario.html
+++ b/vistas/registrousuario.html
@@ -81,7 +81,7 @@
                         </div>
                         <div class="form-group mx-sm-7 pt-3">
                             <select name="carrera" id="carrera" class="slct slct-combo" required>
-                                <option value="">Seleccione una opcion</option>
+                                <option value="">Seleccione una opción</option>
                                 <option value="Ingenieria en Sistemas Computacionales">Ingenieria en Sistemas Computacionales</option>
                                 <option value="Ingenieria Industrial">Ingenieria Industrial</option>
                                 <option value="Ingenieria Logistica">Ingenieria Logistica</option>
