Acentos y errores del documento 2

--- a/vistas/correo.html
+++ b/vistas/correo.html
@@ -46,7 +46,7 @@
             <div class="formulario col-10 col-sm-9 col-md-7 col-lg-5 col-xl-4 ">
                 <div>
                     <div class="div div-cabeza mx-sm-7">
-                        <p class="ti ti-texto ">Iniciar Sesion </p>
+                        <p class="ti ti-texto ">Iniciar Sesión </p>
                     </div>
 
                 </div>
