--- a/vistas/index.html
+++ b/vistas/index.html
@@ -67,7 +67,7 @@
                     </form>
                     <div class="row">
                         <div class="col-6">
-                            <button class="btn btn-boton " type="submit" name="registrar" onclick="location.href='registrousuario.html'"><img class="fa fa-icon " src="../imagenes/signin.png " /> Registrarse</button>
+                            <button class="btn btn-boton " type="submit" name="registrar" onclick="location.href='registrousuario.php?estado=0'"><img class="fa fa-icon " src="../imagenes/signin.png " /> Registrarse</button>
 
                         </div>
                         <div class="col-6">
