--- a/vistas/correo.html
+++ b/vistas/correo.html
@@ -103,7 +103,8 @@
 
 
     <script>
-        $(document).ready(function() {
+        $(document).ready(function() 
+        {
             $('[data-toggle="tooltip"]').tooltip();
         });
     </script>
