--- a/vistas/index.html
+++ b/vistas/index.html
@@ -120,7 +120,8 @@
 
 
     <script>
-        $(document).ready(function() {
+        $(document).ready(function() 
+        {
             $('[data-toggle="tooltip"]').tooltip();
         });
     </script>
