--- a/vistas/registrousuario.html
+++ b/vistas/registrousuario.html
@@ -39,13 +39,7 @@
         </nav>
     </div>
 
-
-
-
     <br>
-
-
-
 
     <div class="container">
         <div class="row justify-content-center  mt-5 mr-1col-sm-5" style="margin: 0 auto;">
@@ -124,13 +118,6 @@
         </div>
     </div>
 
-
-
-
-
-
-
-
     <div class="container">
         <div class="row">
             <div class="borde col-sm-13 div div-pie-pagina width:100%">
@@ -153,15 +140,12 @@
         </div>
     </div>
 
-
-
     <script>
-        $(document).ready(function() {
+        $(document).ready(function()
+        {
             $('[data-toggle="tooltip"]').tooltip();
         });
     </script>
-
-
 
 </body>
 
